<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DetailOfHikes"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/HikeName"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical|start"
                />
            <TextView
                android:id="@+id/hike_name_detail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/HikeName"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="center_vertical|start"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/HikeLocation"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical|start"
                />
            <TextView
                android:id="@+id/hike_location_detail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/HikeLocation"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="center_vertical|start"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/HikeDate"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical|start"
                />
            <TextView
                android:id="@+id/hike_date_detail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:text="00/00/0000"
                android:textSize="16sp"
                android:gravity="center_vertical|start"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="Parking Available"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical|start"
                />
            <CheckBox
                android:id="@+id/parking_available_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ParkingAvailable"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:id="@+id/hike_length_title_input"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/LengthOfHike"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical|start"
                />
            <TextView
                android:id="@+id/hike_length_detail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/LengthOfHike"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="center_vertical|start"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/HikeLevel"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical|start"
                />
            <TextView
                android:id="@+id/hike_level_detail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/HikeLevel"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="center_vertical|start"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/HikeEstimate"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical|start"
                />
            <TextView
                android:id="@+id/hike_estimate_detail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/HikeEstimate"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="center_vertical|start"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/HikeDescription"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical|start"
                />
            <TextView
                android:id="@+id/hike_description_detail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/HikeDescription"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="center_vertical|start"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detail_layout"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/btn_add_observation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Observation"
            />

        <Button
            android:id="@+id/btn_view_observation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="View Observations"
            />
    </LinearLayout>

    <include layout="@layout/bottom_app_bar" />



</RelativeLayout>