<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Hike"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/HikeName"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical|start"
                />
            <EditText
                android:id="@+id/hike_name_edit_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/HikeName"
                android:inputType="text"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/HikeLocation"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical|start"
                />
            <EditText
                android:id="@+id/hike_location_edit_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/HikeLocation"
                android:inputType="text"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/HikeDate"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical|start"
                />
            <TextView
                android:id="@+id/hike_date_edit_input"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="00/00/0000"
                android:textSize="16sp"
                android:gravity="center_vertical|start"
                android:layout_marginRight="5dp"
                />
            <Button
                android:id="@+id/btn_choose_date_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Choose Date" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="Parking Available"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical|start"
                />
            <CheckBox
                android:id="@+id/parking_available_edit_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ParkingAvailable"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/LengthOfHike"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical|start"
                />
            <EditText
                android:id="@+id/hike_length_edit_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/LengthOfHike"
                android:inputType="number"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/HikeLevel"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical|start"
                />

            <EditText
                android:id="@+id/hike_level_edit_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/HikeLevel"
                android:inputType="number" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/HikeEstimate"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical|start"
                />
            <EditText
                android:id="@+id/hike_estimate_edit_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/HikeEstimate"
                android:inputType="number" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:layout_marginBottom="5dp"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:text="@string/HikeDescription"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical|start"
                />
            <EditText
                android:id="@+id/hike_description_edit_input"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/HikeDescription"
                android:inputType="text" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_submit_edit_hike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Submit" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true">
        <include layout="@layout/bottom_app_bar" />
    </LinearLayout>
</RelativeLayout>